--- a/index.html
+++ b/index.html
@@ -101,6 +101,18 @@
     </div>
   </div>
 
+  <!-- DATA SECTION -->
+  <div id="data-section" class="hidden p-4 border rounded mb-4">
+    <h3 class="font-semibold mb-2">📋 Data Dokumen</h3>
+      <p>Ini adalah halaman data dokumen.</p>
+  </div>
+
+  <!-- VERIFIKASI SECTION -->
+    <div id="verifikasi-section" class="hidden p-4 border rounded">
+      <h3 class="font-semibold mb-2">✅ Verifikasi</h3>
+        <p>Ini adalah halaman verifikasi tanda tangan.</p>
+    </div>
+  
   <!-- SCRIPT -->
   <script>
     const USERS = { "admin": "1234", "user": "abcd" };
