--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <th class="border p-2">Aksi</th>
       </tr>
     </thead>
-    <tbody id="result-table" class="text-sm">
+    <tbody id="verify-table-body">
       <!-- Data hasil pencarian muncul di sini -->
     </tbody>
   </table>
