--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   
   <!-- SCRIPT -->
   <script>
-    let documents = []; // Database sementara
+    // let documents = []; // Database sementara
     const USERS = { "admin": "1234", "user": "abcd" };
     function login() {
       const u = document.getElementById("username").value;
